--- a/capitalone/access.html
+++ b/capitalone/access.html
@@ -1,10 +1,19 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; URL='https://api.instagram.com/oauth/authorize/?client_id=b46aea1d1fe6472183606bf39b1b6781&redirect_uri=http://mete0.github.io/capitalone/&response_type=token'" />
-    <title></title>
-</head>
-<body>
-</body>
+<!DOCTYPE html>
+
+<html lang="en">
+
+<head>
+
+    <meta charset="UTF-8">
+
+    <meta http-equiv="refresh" content="0; URL='https://api.instagram.com/oauth/authorize/?client_id=b46aea1d1fe6472183606bf39b1b6781&redirect_uri=http://mete0.github.io/capitalone/&response_type=token&scope=public_content'" />
+
+    <title></title>
+
+</head>
+
+<body>
+
+</body>
+
 </html>
