--- a/index.html
+++ b/index.html
@@ -36,6 +36,9 @@
         <span class="tagline tagline-11 amber-text text-lighten-4">On Point.</span>
         <span class="tagline tagline-12 deep-orange-text text-lighten-3">Implementer.</span>
         <span class="tagline tagline-13 grey-text">The "Go To" Guy.</span>
+        <span class="tagline tagline-13 green-text">Dedicated.</span>
+        <span class="tagline tagline-13 green-text">Determined.</span>
+        <span class="tagline tagline-13 red-text">Dependable.</span>
         <span class="tagline tagline-15 light-blue-text text-accent-1">Dreamer.</span>
     </div>
 
