--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="intro indigo z-depth-1">
     <img class="responsive-img circle"
-         src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAqKAAAAJDU2YWE2YWIyLTBmYTktNDM0OC04OWFkLWQ5NDgzNWFhNzMzOA.jpg"
+         src="l2qyhzzdoqwficcwnijs.jpg"
          width="128" height="128">
     <h5 class="grey-text text-lighten-5">Andy Chung</h5>
     <div class="taglines">
@@ -60,9 +60,9 @@
             <h6>Profile</h6>
             <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
-                    <img class=circle
-                         src="https://media.licdn.com/mpr/mpr/shrinknp_400_400/AAEAAQAAAAAAAAqKAAAAJDU2YWE2YWIyLTBmYTktNDM0OC04OWFkLWQ5NDgzNWFhNzMzOA.jpg"
-                         width="64" height="64">
+                    <img class="responsive-img circle"
+                         src="l2qyhzzdoqwficcwnijs.jpg"
+                         width="64" height="128">
                     <p>Check me out on LinkedIn and Github.</p>
                 </div>
                 <div class="card-action">
