--- a/nest/index.html
+++ b/nest/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta http-equiv="refresh" content="0; url=http://54.243.20.217/" />
+    <meta http-equiv="refresh" content="0; url=http://6da360fe.ngrok.io/" />
     <title>Title</title>
 </head>
 <body>
