--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body>
 <div class="intro indigo z-depth-1">
     <img class="responsive-img circle"
-         src="l2qyhzzdoqwficcwnijs.jpg"
+         src="andy.jpg"
          width="128" height="128">
     <h5 class="grey-text text-lighten-5">Andy Chung</h5>
     <div class="taglines">
@@ -61,7 +61,7 @@
             <div class="card blue-grey darken-1">
                 <div class="card-content white-text">
                     <img class="responsive-img circle"
-                         src="l2qyhzzdoqwficcwnijs.jpg"
+                         src="andy.jpg"
                          width="64" height="128">
                     <p>Check me out on LinkedIn and Github.</p>
                 </div>
